fixed the issue with the form width. put everything inside a single wrapper instead of wrapping each individual class

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -28,6 +28,7 @@
     width: calc(40% - 40px);
     margin-right: 40px;
     padding: 50px;
+    align-self: center;
 }
 
 .contentContainer {
