--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -67,7 +67,7 @@
 // messageBox styling
 
 form {
-  max-width: 80%;
+  width: 100%;
   
   display: flex;
   flex-direction: column;
