--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -25,6 +25,10 @@ header nav li {
     padding: 20px 0;
 }
 
+.homePage {
+    color: #e4a436;
+} 
+
 .index-title {
     display: flex;
     justify-content: center;
